k8s/marketplace-public-service.yaml
#Run example, including placeholder substitution:
#cat marketplace-public-service.yaml |
# sed 's/__ENVIRONMENT'"/ci/g
#  s/__SERVER_ROLE/public/;" \
#  |kubectl apply -f -
#TODO: support variables: $SERVER_ROLE, PORT
#TODO support labels?

apiVersion: v1
kind: Service
metadata:
  name: marketplace-__SERVER_ROLE
  namespace: __ENVIRONMENT
  labels:
    app: marketplace-__SERVER_ROLE
    name: marketplace-__SERVER_ROLE
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      #SSM APP_PORT
      targetPort: 3000
  selector:
   app: marketplace-__SERVER_ROLE
