k8s/ingress-marketplace.yaml
# Important:
# Need to create (manually for now) the related hosts on AWS Route53

# Run example, including placeholder substitution:
#   cat ingress-marketplace.yaml |
#   sed 's/__ENVIRONMENT'"/ci/g" \
#   |kubectl apply -f -

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "ingress-marketplace"
  namespace: ci
  annotations:
    kubernetes.io/ingress.class: "nginx"

  labels:
    app: marketplace-ingress
spec:
  rules:
  - host: __ENVIRONMENT.marketplace-public.kinecosystembeta.com
    http:
      paths:
      - path: /
        backend:
          serviceName: marketplace-public
          servicePort: 80
  - host: __ENVIRONMENT.marketplace-internal.kinecosystembeta.com
    http:
      paths:
      - path: /
        backend:
          serviceName: marketplace-internal
          servicePort: 80
  - host: __ENVIRONMENT.marketplace-admin.kinecosystembeta.com
    http:
      paths:
      - path: /
        backend:
          serviceName: marketplace-admin
          servicePort: 80
